Tue Mar 15 21:38:28 2016  Tanaka Akira  <akr@fsij.org>

	* enum.c (enum_inject): Consider redefinition of Fixnum#+.
	  [ruby-dev:49510] [Bug#12178] Reported by usa.

Tue Mar 15 20:32:57 2016  Tanaka Akira  <akr@fsij.org>

	* enum.c (enum_inject): Implement the specialized code for :+ operator
	  for Fixnums.

Tue Mar 15 20:21:01 2016  Tanaka Akira  <akr@fsij.org>

	* enum.c (enum_inject): Implement the specialized code for self is an
	  array and a symbol operator is given.

Tue Mar 15 16:29:51 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode.c: Eliminating common code.
	  (with Kimihito Matsui)

Tue Mar 15 16:17:09 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode.c: Expansion of some code repetition in preparation for
	  elimination of common code pieces.
	  (with Kimihito Matsui)

Tue Mar 15 13:49:23 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode.c: Additional macros and code to use mapping data in
	  CaseMappingSpecials array.
	  (with Kimihito Matsui)

Tue Mar 15 13:41:22 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* internal.h (rb_gc_mark_global_tbl): should be private,
	  but was accidentally exported.

Tue Mar 15 12:51:06 2016  Marcus Stollsteimer  <sto.mar@web.de>

	* doc/extension.ja.rdoc: Fix RDoc markup in doc/extension*.rdoc.
	  [ci skip][Bug #12143][ruby-core:74143]
	* doc/extension.rdoc: ditto.

Tue Mar 15 09:56:41 2016  Ian Lunderskov  <ian.lunderskov@gmail.com>

	* time.c: Minor typo in Time#dst? documentation.
	  [ci skip][fix GH-1290]

Tue Mar 15 04:36:41 2016  Charles Oliver Nutter  <headius@headius.com>

	* test/ruby/test_rubyoptions.rb (test_disable): add tests for
	  --disable-gems and --disable-did_you_mean.

Tue Mar 15 03:35:04 2016  Eric Hodel  <drbrain@segment7.net>

	* marshal.c (r_object0): Fix Marshal crash for corrupt extended object.

Tue Mar 15 01:22:27 2016  Charles Oliver Nutter  <headius@headius.com>

	* test/ruby/test_rubyoptions.rb: make version matching support